--- a/dashboards.ipynb
+++ b/dashboards.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# warnings.filterwarnings(\n",
-    "#     action=\"ignore\", message=\"Mean of empty slice\", category=RuntimeWarning)"
+    "import warnings\n",
+    "warnings.filterwarnings(\n",
+    "    action=\"ignore\", message=\"Mean of empty slice\", category=RuntimeWarning)"
    ]
   },
   {
@@ -40,18 +41,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb7d75021de241e793387ba281eaaaca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='name', options=(('ASD AHRO3469', 'AHRO3469'), ('ASD ARBE3445', 'AR…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dash_sub()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c734c08fa04c4b77b2a9757633f68970",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='group', index=1, options=('ASD', 'Control'), value='Control'), Sel…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dash_group()"
    ]
